# tesla-vehicle-command

./: .editorconfig  .gitignore  CMakeLists.txt  FUNDING.yml  LICENSE.md  README.md  arduino.sh  library.json  proto.sh
docs/: metadata.md  security.md  session.md  shared.md
examples/arduino/: arduino.ino
examples/esp32/: CMakeLists.txt  platformio.ini  sdkconfig.seeed_xiao_esp32c3
examples/esp32/src/: main.cpp
examples/simple/: CMakeLists.txt  ble.cpp
examples/simple/include/: ble.h
examples/simple/src/: ble.cpp
include/: authenticator.h  car_server.pb.h  carserver.h  metadata.h  security.h  session.h  shared.h  signatures.pb.h
patches/: mbedtls2.patch
protobuf/: car_server.options  signatures.options  universal_message.options  universal_message.proto  vcsec.options
src/: authenticator.cpp  car_server.pb.c  carserver.cpp  metadata.cpp  security.cpp  session.cpp  shared.cpp
